--- a/light.css
+++ b/light.css
@@ -95,16 +95,16 @@ main .gsc-loading-image {
 }
 
 /* 排序按钮 */
-
 .BtnGroup {
   background-color: #eaeef2;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
 }
 
 .BtnGroup-item {
   background-color: #eaeef2;
   border: unset;
   box-shadow: unset;
+  padding: 4px 12px;
 }
 
 .btn.BtnGroup-item[aria-selected="true"] {
@@ -112,7 +112,7 @@ main .gsc-loading-image {
   background-color: white;
 
   border: 1px solid #8c959f !important;
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
 
   box-shadow: unset;
 }
