更改二级文字颜色

--- a/light.css
+++ b/light.css
@@ -52,7 +52,7 @@ main {
   --color-btn-primary-disabled-bg: #94d3a2;
   --color-btn-primary-disabled-border: rgb(27 31 36 / 15%);
   --color-fg-default: #24292f;
-  --color-fg-muted: #57606a;
+  --color-fg-muted: #656d76;
   --color-fg-subtle: #6e7781;
   --color-canvas-default: #fff;
   --color-canvas-overlay: #fff;
