--- a/light.css
+++ b/light.css
@@ -1,3 +1,5 @@
+/* GitHub light theme */
+
 main {
   --color-prettylights-syntax-comment: #6e7781;
   --color-prettylights-syntax-constant: #0550ae;
