--- a/light.css
+++ b/light.css
@@ -102,6 +102,11 @@ samp {
   font-family: "Monaco", monospace;
 }
 
+/* 修复全局字体后的错误 */
+button.link-secondary.text-sm>svg {
+  height: 20px;
+}
+
 /* 修复“写回复”输入框体颜色错误 */
 .cursor-text {
   color: #999;
