--- a/light.css
+++ b/light.css
@@ -144,3 +144,50 @@ em.color-text-secondary.text-sm {
 .gsc-comment-box-md-toolbar {
   display: none;
 }
+
+/* Markdown */
+/* Headings */
+.markdown h1 {
+  font-size: 2em;
+  border-bottom: unset;
+}
+
+.markdown h2 {
+  font-size: 1.5em;
+  border-bottom: unset;
+}
+
+.markdown h3 {
+  font-size: 1.25em;
+}
+
+.markdown h4 {
+  font-size: 1em;
+}
+
+.markdown h5 {
+  font-size: 0.875em;
+}
+
+.markdown h6 {
+  font-size: 0.85em;
+  color: var(--color-fg-default, var(--color-text-primary));
+}
+
+/* 分割线 */
+.markdown hr {
+  height: 1px;
+}
+
+/* 列表 */
+.markdown ul,
+.markdown ul ul ul,
+.markdown ul ul ul ul ul {
+  list-style-type: disc;
+}
+
+.markdown ul ul,
+.markdown ul ul ul ul,
+.markdown ul ul ul ul ul ul {
+  list-style-type: circle;
+}
