--- a/light.css
+++ b/light.css
@@ -1,3 +1,8 @@
+/*! MIT License
+ * Copyright (c) 2018 GitHub Inc.
+ * https://github.com/primer/primitives/blob/main/LICENSE
+ */
+
 main {
   --color-prettylights-syntax-comment: #6e7781;
   --color-prettylights-syntax-constant: #0550ae;
@@ -80,6 +85,7 @@ main {
   --color-scale-gray-1: #eaeef2;
   --color-scale-blue-1: #b6e3ff;
 
+  /*! Extensions from @primer/css/alerts/flash.scss */
   --color-social-reaction-bg-hover: var(--color-scale-gray-1);
   --color-social-reaction-bg-reacted-hover: var(--color-scale-blue-1);
 }
@@ -90,95 +96,4 @@ main .pagination-loader-container {
 
 main .gsc-loading-image {
   background-image: url("https://github.githubassets.com/images/mona-loading-default.gif");
-}
-
-/* 字体 */
-main {
-  font-family: "Nunito Sans", sans-serif;
-}
-
-/* 代码字体 */
-code,
-kbd,
-pre,
-samp {
-  font-family: "Monaco", monospace;
-}
-
-/* 修复全局字体后的错误 */
-button.link-secondary.text-sm>svg {
-  height: 20px;
-}
-
-/* 链接鼠标悬浮 */
-a:hover {
-  /* 取消下划线 */
-  text-decoration-line: unset;
-}
-
-/* 态度区 */
-.gsc-reactions {
-  margin-bottom: 48px;
-}
-
-/* 隐藏 powered by */
-em.color-text-secondary.text-sm {
-  display: none;
-}
-
-/* 隐藏工具栏 */
-.gsc-comment-box-md-toolbar {
-  display: none;
-}
-
-/* 回复的态度区离正文远一点点 */
-.gsc-reply-footer {
-  margin-top: 0.25rem;
-}
-
-/* 评论正文 */
-/* Headings */
-.markdown h1 {
-  font-size: 2em;
-  border-bottom: unset;
-}
-
-.markdown h2 {
-  font-size: 1.5em;
-  border-bottom: unset;
-}
-
-.markdown h3 {
-  font-size: 1.25em;
-}
-
-.markdown h4 {
-  font-size: 1em;
-}
-
-.markdown h5 {
-  font-size: 0.875em;
-}
-
-.markdown h6 {
-  font-size: 0.85em;
-  color: var(--color-fg-default, var(--color-text-primary));
-}
-
-/* 分割线 */
-.markdown hr {
-  height: 1px;
-}
-
-/* 列表 */
-.markdown ul,
-.markdown ul ul ul,
-.markdown ul ul ul ul ul {
-  list-style-type: disc;
-}
-
-.markdown ul ul,
-.markdown ul ul ul ul,
-.markdown ul ul ul ul ul ul {
-  list-style-type: circle;
 }
