--- a/light.css
+++ b/light.css
@@ -70,16 +70,16 @@ main {
   --color-btn-active-border: rgb(31 35 40 / 15%);
   --color-btn-selected-bg: hsl(220deg 14% 94% / 100%);
   --color-btn-primary-text: #fff;
-  --color-btn-primary-bg: #1f883d;
+  --color-btn-primary-bg: rgba(var(--accent-rgb), 0.9);
   --color-btn-primary-border: rgb(31 35 40 / 15%);
   --color-btn-primary-shadow: 0 1px 0 rgb(31 35 40 / 10%);
   --color-btn-primary-inset-shadow: inset 0 1px 0 rgb(255 255 255 / 3%);
-  --color-btn-primary-hover-bg: #1a7f37;
+  --color-btn-primary-hover-bg: var(--accent);
   --color-btn-primary-hover-border: rgb(31 35 40 / 15%);
   --color-btn-primary-selected-bg: hsl(137deg 66% 28% / 100%);
   --color-btn-primary-selected-shadow: inset 0 1px 0 rgb(0 45 17 / 20%);
   --color-btn-primary-disabled-text: rgb(255 255 255 / 80%);
-  --color-btn-primary-disabled-bg: #94d3a2;
+  --color-btn-primary-disabled-bg: rgba(var(--accent-rgb), 0.45);
   --color-btn-primary-disabled-border: rgb(31 35 40 / 15%);
   --color-action-list-item-default-hover-bg: rgb(208 215 222 / 32%);
   --color-segmented-control-bg: #eaeef2;
